--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "browserify app.js -o bundle.js",
+    "watch": "watchify app.js -o bundle.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,11 @@
   "homepage": "https://github.com/srtalaie/BrightBearBakery#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "browserify": "^16.2.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.0",
+    "watchify": "^3.11.0"
   }
 }
